Fixes bug MDL-11994, Accessibility: "Users tagged with ..." should be marked up as a list.

--- a/theme/standard/styles_layout.css
+++ b/theme/standard/styles_layout.css
@@ -1307,8 +1307,8 @@ a.skip:focus, a.skip:active {
   clear: left;
 }
 
-.sideblock .content .inline-list li {
-  display:inline;
+.sideblock .content .inline-list li, .inline-list li {
+  display: inline;
 }
 
 .sideblock .content ul.list li.listentry {
