Unsetting one white border.

--- a/theme/wood/styles_color.css
+++ b/theme/wood/styles_color.css
@@ -17,7 +17,8 @@
 form.mform fieldset.hidden,
 form.mform fieldset.hidden fieldset.fgroup,
 ul.tabrow1 li a:link,
-ul.tabrow1 li a:visited {
+ul.tabrow1 li a:visited,
+.sideblock .hide-show a {
     border:none;
     background:none;
 }
