--- a/theme/standard/styles_layout.css
+++ b/theme/standard/styles_layout.css
@@ -1170,6 +1170,16 @@ body#admin-modules table.generaltable td.c0
   display: block;
 }
 
+#admin-uploaduser table#uuresults {
+  margin-bottom: 2em;
+}
+
+#admin-uploaduser table#uupreview,
+#admin-uploaduser table#uuresults td.cell {
+  padding-left: 3px;
+  padding-right: 3px;
+}
+
 /***
  *** Blocks
  ***/
