Fixes MDL-12029 "Glossary view needs heading markup + other accessibility fixes".

--- a/theme/standard/styles_fonts.css
+++ b/theme/standard/styles_fonts.css
@@ -734,8 +734,15 @@ body#mod-forum-index .generalbox .cell {
 .glossarypost .time {
   font-size: 0.8em;
 }
-.concept {
-  font-weight: bold;
+.glossarycategoryheader h2 {
+  margin: 0;
+} 
+.glossarypost .concept h3 {
+  margin: 0;
+}
+.glossarypost .entryheader {
+  font-weight: normal;
+  text-align: left;
 }
 .glossarycomment .author {
   font-size: 0.8em;
