Follow up fixes MDL-12029 "Glossary view needs heading markup..."

--- a/theme/standard/styles_fonts.css
+++ b/theme/standard/styles_fonts.css
@@ -734,11 +734,14 @@ body#mod-forum-index .generalbox .cell {
 .glossarypost .time {
   font-size: 0.8em;
 }
-.glossarycategoryheader h2 {
-  margin: 0;
-} 
+.glossarycategoryheader h2,
 .glossarypost .concept h3 {
+  font-size: 1em;
   margin: 0;
+}
+.glossarypost div.concept h3,
+.glossarypost.continuous .concept {
+  display: inline;
 }
 .glossarypost .entryheader {
   font-weight: normal;
