MDL-12072 Added heading tag for calendar 'blocks'

--- a/theme/standard/styles_layout.css
+++ b/theme/standard/styles_layout.css
@@ -1449,6 +1449,9 @@ a.skip:focus, a.skip:active {
 {
   text-align: center;
 }
+#calendar .sideblock h2 {
+  text-align: left;
+}
 
 #calendar .maincalendar,
 #calendar .sidecalendar
