MDL-12045 :: the extra "clearer" div broke the custom_corners theme on IE7. I removed the "clearer" div and added the class "clerafix" to the surrounding coursebox. In FF and Safari floating is a mess now. I removed float:left for "coursebox" to get the page working in all browsers. It is a single element and should not need floating.

--- a/theme/standard/styles_layout.css
+++ b/theme/standard/styles_layout.css
@@ -1976,7 +1976,7 @@ body#course-info .generalbox.info {
 
 .coursebox {
   width: 100%;
-  float:left;
+  /* float:left; */
   margin-bottom: 15px;
   border-width:1px;
   border-style:solid;
