--- a/theme/custom_corners/user_styles.css
+++ b/theme/custom_corners/user_styles.css
@@ -1,4 +1,3 @@
-/* @override http://ubuntu.userver.lan/moodle_19/theme/custom_corners/user_styles.css */
 div#infowrapper {
   position: fixed;
   overflow: auto;
@@ -26,6 +25,7 @@ div#page {
   margin: 0 4%;
   padding-top: 2px;
   width: auto;
+  /* min-width: 800px; */
 }
 div.clearer {
   clear: both;
@@ -1025,6 +1025,10 @@ body#course-user div.section {
 }
 body#course-user div.tabtree {
   margin-bottom: 10px;
+}
+.tabrow0 div,
+.tabrow0 ul {
+  top: 2.1em;
 }
 a.dimmed:link,
 a.dimmed:visited {
