MDL-10683 :: added as Eric proposed:
.mform .ftextarea #id_alltext {
    width: 100%;
}

--- a/theme/standard/styles_layout.css
+++ b/theme/standard/styles_layout.css
@@ -589,7 +589,8 @@ fieldset.fdate_selector label {
 .mform input, .mform select {
   width: auto;
 }
-.mform ftextarea {
+.mform .ftextarea #id_alltext {
+    width: 100%;
 }
 .mform br {
   clear: left;
