added 2 CSS definitions to dimm the summary and the course no. in a hidden course topic.

--- a/theme/custom_corners/user_styles.css
+++ b/theme/custom_corners/user_styles.css
@@ -1040,6 +1040,12 @@ span.dimmed_text {
 .dimmed_text {
   color: #AAAAAA;
 }
+tr.hidden div.summary {
+  color: #AAAAAA;
+}
+tr.hidden td.left {
+  color: #AAAAAA;
+}
 body#message-index div#header,body#message-discussion div#header,body#message-history div#header,body#message-user div#header {
   display: none;
 }
