--- a/theme/custom_corners/user_styles.css
+++ b/theme/custom_corners/user_styles.css
@@ -938,6 +938,10 @@ form.mform legend {
   color: #0066ff;
   font-size: 120%;
 }
+form#adminsettings span.form-shortname {
+  color: #AAAAAA;
+  font-style: italic;
+}
 div.coursebox div.summary {
   width: 45%;
 }
