--- a/theme/standard/styles_layout.css
+++ b/theme/standard/styles_layout.css
@@ -2640,8 +2640,9 @@ body.notes .notesgroup {
 .tabrow0 {
   text-align: center;
   width:100%;
-  padding:0 0 1.75em 0;
   margin:0;
+  margin-top: 10px;
+  padding:0 0 1.75em 0;
   list-style:none;
   line-height:1.8em;
   font-size: 84%;
