MDL-12312 Reviewed and slightly improved Petr's great help file

--- a/theme/standard/styles_fonts.css
+++ b/theme/standard/styles_fonts.css
@@ -501,6 +501,19 @@ body#grade-index .grades .header {
   font-size: 0.7em;
 }
 
+#grade-aggregation-help dt {
+    font-weight: bold;
+}
+
+
+#grade-aggregation-help dd.example {
+    font-style: italic;
+}
+
+#grade-aggregation-help code {
+    font-style: normal;
+}
+
 /***
  *** Login
  ***/
