--- a/theme/standard/styles_layout.css
+++ b/theme/standard/styles_layout.css
@@ -2494,6 +2494,10 @@ body.notes .notesgroup {
   margin-top: 0;
 }
 
+.questioncatategories h3 {
+  margin-top: 0;
+}
+
 .que {
   text-align: left;
   margin: 0 auto 1.8em auto;
