Fixes MDL-12541 "Weeks course format - dates for each section should be marked up as heading".

--- a/theme/standard/styles_fonts.css
+++ b/theme/standard/styles_fonts.css
@@ -434,6 +434,12 @@ table.minicalendar {
   line-height:1em;
 }
 
+#course-view .section .weekdates {
+  margin: 0;
+  font-weight: normal;
+  font-size: 1em;
+}
+
 #course-view .section .left {
   font-weight:bold;
 }
