MDL-9459 - Provide information relating to groups in the summary message "Attemts: 123". Now, depending on the situation, you see one of three messages: "Attempts: 123", "Attemtps 123 (45 from your groups)" or "Attemtps 123 (45 from this group)".
I also took the opportunity to improve the layout of this message slightly, and clarify the message that tells you that you cannot add or remove questions from the quiz if there are attemts.

--- a/theme/standard/styles_layout.css
+++ b/theme/standard/styles_layout.css
@@ -3764,7 +3764,7 @@ table.quizreviewsummary td.cell {
 }
 
 #mod-quiz-edit #page .controls,
-#mod-quiz-edit #page .attemptsnotice
+#mod-quiz-edit #page .quizattemptcounts
 {
   text-align: center;
 }
@@ -3899,6 +3899,10 @@ table.quizreviewsummary td.cell {
 
 .mod-quiz .gradingdetails {
   font-size: small;
+}
+.quizattemptcounts {
+  text-align: center;
+  margin: 6px 0;
 }
 /***
  *** Modules: Resource
