--- a/theme/standard/styles_layout.css
+++ b/theme/standard/styles_layout.css
@@ -3787,7 +3787,7 @@ table.quizreviewsummary td.cell {
 }
 
 #mod-quiz-edit #page .controls,
-#mod-quiz-edit #page .attemptsnotice
+#mod-quiz-edit #page .quizattemptcounts
 {
   text-align: center;
 }
@@ -3922,6 +3922,10 @@ table.quizreviewsummary td.cell {
 
 .mod-quiz .gradingdetails {
   font-size: small;
+}
+.quizattemptcounts {
+  text-align: center;
+  margin: 6px 0;
 }
 /***
  *** Modules: Resource
