MDL-12616 - Improve layout so you can distinguish the student's response to an essay question from the feedback.

--- a/theme/standard/styles_color.css
+++ b/theme/standard/styles_color.css
@@ -754,6 +754,9 @@ table.message_search_results td {
 .shortanswer .answer {
     background-color: #EEE;
 }
+.essay .answerreview {
+    background-color: #EEE;
+}
 .que .feedback {
   border-color: #DDD;
 }
